<resources>
    <string name="app_name">Santha Market</string>
    <string name="enter_mobile_number_to_sign_in">Enter your mobile number to Sign-In</string>
    <string name="an_otp_desc"><![CDATA[ OTP sent to your Mobile Number \n Enter OTP here]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="santha_market">Santha Market</string>
    <string name="amount_digits_allowed">0123456789.</string>
    <string name="email_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@._</string>
    <string name="address_digits_allowed">1234567890@$%^&amp;*()_+-=qwertyuiopasdfghjklzxcvbnm:;,.?/|~`{}[]QWERTYUIOPASDFGHJKLZXCVBNM+x÷x€£¥₩×\r\n ●■□⊙☆¤•°《》¿¡\\</string>
    <string name="user_name_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="country_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="postcode_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456789-</string>
    <string name="telephone_digits_allowed">+-0123456789-</string>
    <string name="fax_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-</string>
    <string name="website_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.</string>
    <string name="description_digits_allowed">1234567890@$%^&amp;*()_+-=qwertyuiopasdfghjklzxcvbnm:;,.?/|~`{}[]QWERTYUIOPASDFGHJKLZXCVBNM+x÷x€£¥₩×\r\n ●■□⊙☆¤•°《》¿¡\\</string>
    <string name="company_name_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="password_digits_allowed">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@_</string>
    <string name="indicates_any_of_these_is_manadory">** Indicates any One is Mandatory</string>
    <string name="categoryId">categoryId</string>
    <string name="Tags">Tags</string>
    <string name="no_related_products_available">No Related Products Available !</string>
    <string name="Selected_Color">Selected_Color</string>
    <string name="Selected_Size">Selected_Size</string>
    <string name="order_summary">Order Summary</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="Rs">\u20A8</string>
    <string name="processing_request">Processing request</string>
    <string name="please_wait">Please Wait...</string>
    <string name="add_new_address">Add New Address</string>
    <string name="product_id">product_id</string>
    <string name="add_or_change">Add or Change Address</string>
    <string name="date_time_min">dd-M-yyyy hh:mm:ss</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="pay_now">PAY NOW</string>
    <string name="remove_item">Remove</string>
    <string name="fav">Fav</string>
    <string name="remove_ad_fav">Remove as Favourite</string>
    <string name="add_to_fav">Add to Favourite</string>
    <string name="please_enter_cancellation_reason">Please Enter Cancellation Reason</string>
    <string name="no_address_found">No Address Found !</string>
    <string name="no_orders_found">No Orders Found !</string>
    <string name="order_status">Order Status</string>
    <string name="web_url">https://jaadhutv1.moneyeraaa.workers.dev/samplee.mp4</string>
    <string name="pro_id">product_id</string>
    <string name="address_book">Address Book</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="admin_email">santhamarketonline@gmail.com</string>
    <string name="local_shop_image">https://1.bp.blogspot.com/-v2mJf8VcOXQ/YQP56TL503I/AAAAAAAABlI/7-FV9XNHjVULS3NIhx0C6jnvAWMpcUU4QCLcBGAsYHQ/s320/Group%2B4.png</string>
    <string name="ORDERED">ORDERED</string>
    <string name="PROCESSING">PROCESSING</string>
    <string name="PICKED">PICKED_BY_AGENT</string>
    <string name="RETURNED">RETURNED</string>
    <string name="CANCELLED">CANCELLED</string>
    <string name="DELIVERED">DELIVERED</string>
    <string name="ACCEPT">ACCEPT</string>
    <string name="REJECT">REJECT</string>
    <string name="ADDRESS_BOOK">ADDRESS_BOOK</string>
    <string name="CART_ITEMS">CART_ITEMS</string>
    <string name="CATEGORIES">CATEGORIES</string>
    <string name="SUB_CATEGORIES">SUB_CATEGORIES</string>
    <string name="FAVOURITES">FAVOURITES</string>
    <string name="PRODUCTS">PRODUCTS</string>
    <string name="USERS">USERS</string>
    <string name="TAGS">TAGS</string>
    <string name="SPECIFICATIONS">SPECIFICATIONS</string>
    <string name="ORDERS">ORDERS</string>
    <string name="SHOP_OWNERS">SHOP_OWNERS</string>
    <string name="PRODUCT_IMAGES">PRODUCT_IMAGES</string>
    <string name="DEVICE_INFO">DEVICE_INFO</string>
    <string name="FCM_TOKENS">FCM_TOKENS</string>
    <string name="PROFILE_PICS">FCM_TOKENS</string>
    <string name="DAILY_VIEWS">DAILY_VIEWS</string>
    <string name="PAYMENT_STATUS">PAYMENT_STATUS</string>
    <string name="RATINGS">RATINGS</string>
    <string name="DASHBOARD">DASHBOARD</string>
    <string name="CITIES">CITIES</string>
    <string name="OUT_OF_STOCK">Out-of-Stock</string>
    <string name="IN_STOCK">In-Stock</string>
    <string name="LOCAL">Local</string>
    <string name="GLOBAL">Global</string>
    <string name="CASH_ON_DELIVERY">Cash-On-Delivery</string>
    <string name="ONLINE_PAYMENT">Online-Payment</string>
    <string name="PLAYSTORE_BASE_URL">https://play.google.com/store/apps/details?id=</string>
    <string name="intent_cat_id">categoryId</string>
    <string name="error_occured">Error Occured !</string>
    <string name="intent_product_id">product_id</string>
    <string name="intent_poductDetails">productDetails</string>
    <string name="buy_now">Buy Now</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="Continue">Continue</string>
    <string name="cart_items">Cart Items</string>
    <string name="proceed">Proceed</string>
    <string name="cart_typ_key">cart_typ_key</string>
    <string name="no_items_found">No Items Found !</string>
    <string name="help_message">For Help or any Extra cash back contact us at santhamarketonline@gmail.com If any Error occured In App Please Update App From PlayStore</string>
    <string name="final_no_data_found">Take ScreenShot and send to customer care santhamarketonline@gmail.com</string>
    <string name="online">Online</string>
    <string name="COD">COD</string>
    <string name="review_product">Review Product</string>
    <string name="shop_id">intent_shop_id</string>
    <string name="intent_reg_model_key">intent_register_model_key</string>
    <string name="intent_category_shopId">intent_category_shopId</string>
    <string name="FCM_BASE_URL">https://fcm.googleapis.com/</string>
    <string name="OrdersActivity">OrdersActivity</string>
    <string name="HomeActivity">HomeActivity</string>
    <string name="orderFragment">OrderFragment</string>
    <string name="intent_city_id">intent_city_id</string>
    <string-array name="india_states">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>