<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_2sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.10"
                android:adjustViewBounds="false"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/close_icon" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.70"
                android:text="Edit Address"
                android:fontFamily="@font/roboto_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:adjustViewBounds="false"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/check_icon"
                    android:text="Save"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:theme="?android:attr/borderlessButtonStyle" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_anchorGravity="center">

            <LinearLayout
                android:id="@+id/rootLinear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="Full Name *"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/user_name_digits_allowed"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textCapSentences|textNoSuggestions"
                        android:maxLength="50"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="Country"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/user_name_digits_allowed"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textCapSentences|textNoSuggestions"
                        android:maxLength="50"
                        android:text="India"
                        android:clickable="false"
                        android:enabled="false"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    style="@style/ExposedDropdownMenu"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="State *"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">
                    <AutoCompleteTextView
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:inputType="textCapWords|textCapSentences|textNoSuggestions"
                        android:digits="@string/country_digits_allowed"
                        android:maxLength="70" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    style="@style/ExposedDropdownMenu"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="City *"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">
                    <AutoCompleteTextView
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:inputType="textCapWords|textCapSentences|textNoSuggestions"
                        android:digits="@string/country_digits_allowed"
                        android:maxLength="70" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#D7DBDD"
                    android:text="@string/indicates_any_of_these_is_manadory"
                    android:layout_marginTop="@dimen/_15sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="Phone **"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/telephone_digits_allowed"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="20"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="Alternate Number **"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alternateNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/telephone_digits_allowed"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="20"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="Pincode *"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/postcode_digits_allowed"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textCapSentences|textNoSuggestions"
                        android:maxLength="20"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="Street Address *"
                    android:theme="@style/EditTextThemeOverlay"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/streetAddress"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:digits="@string/address_digits_allowed"
                        android:gravity="top|left"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textCapSentences|textMultiLine"
                        android:maxLength="100"
                        android:maxLines="5"
                        android:padding="@dimen/_5sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/checkInternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/gilroyregular"
                    android:text="Check Internet Connection"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/circular_book"
                    android:text="RETRY"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>